--- a/capf/capf.cbp
+++ b/capf/capf.cbp
@@ -32,7 +32,14 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-lraylib" />
+		</Linker>
+		<Unit filename="functions.cpp" />
+		<Unit filename="gabriel.cpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="prototypes.h" />
+		<Unit filename="structs.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
