--- a/cbp/capf.cbp
+++ b/cbp/capf.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="src" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="src" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -35,10 +37,10 @@
 		<Linker>
 			<Add option="-lraylib" />
 		</Linker>
-		<Unit filename="functions.cpp" />
-		<Unit filename="main.cpp" />
-		<Unit filename="prototypes.h" />
-		<Unit filename="structs.cpp" />
+		<Unit filename="../src/Robot.cpp" />
+		<Unit filename="../src/fonctions.cpp" />
+		<Unit filename="../src/main.cpp" />
+		<Unit filename="../src/prototypes.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
